добавляет оверлей на карточки Портфолио

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="backdrop is-hidden" data-backdrop>
         <div class="modal">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum odio maiores laudantium quod doloremque at inventore dolorum rem laborum, aperiam eos soluta tenetur suscipit eius pariatur consectetur! Mollitia voluptatum deleniti voluptate sunt possimus dolorem quasi doloremque quibusdam animi. Ex in, debitis repellat excepturi alias earum optio. A tempore delectus at.</p>
-            <button class="banner-button-close" type="button" data-close-modal>x</button>
+            <button class="banner-button-close" type="button" data-close-modal></button>
         </div>
     </div>
             </div>
@@ -111,7 +111,7 @@
                             <div class="work-img-thumb">
                                 <h3 class="work-txt-thumb">Мобильные приложения</h3>
                             </div>
-                     </div>
+                        </div>
                     </li>
                     <li class="work-items">
                         <div class="work-thumb">
