--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,12 @@
       <ul class="content-list">
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-a-min.jpg" alt="фото ноутбука" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-a-min.jpg" alt="фото ноутбука" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Технокряк</h3>
               <p class="content-text">Веб-сайт</p>
@@ -56,7 +61,13 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-b-min.jpg" alt="фото постера" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-b-min.jpg" alt="фото постера" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Постер New Orlean vs Golden Star</h3>
               <p class="content-text">Дизайн</p>
@@ -65,7 +76,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-c-min.jpg" alt="фото ресторана" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-c-min.jpg" alt="фото ресторана" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Ресторан Seafood</h3>
               <p class="content-text">Приложение</p>
@@ -74,7 +90,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-d-min.jpg" alt="фото наушников" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-d-min.jpg" alt="фото наушников" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Проект Prime</h3>
               <p class="content-text">Маркетинг</p>
@@ -83,7 +104,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-e-min.jpg" alt="фото коробок" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-e-min.jpg" alt="фото коробок" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Проект Boxes</h3>
               <p class="content-text">Приложение</p>
@@ -92,7 +118,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-f-min.jpg" alt="фото монитора" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-f-min.jpg" alt="фото монитора" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Inspiration has no Borders</h3>
               <p class="content-text">Веб-сайт</p>
@@ -101,7 +132,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-g-min.jpg" alt="фото книги" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-g-min.jpg" alt="фото книги" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Издание Limited Edition</h3>
               <p class="content-text">Дизайн</p>
@@ -110,7 +146,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-h-min.jpg" alt="фото проекта" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-h-min.jpg" alt="фото проекта" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Проект LAB</h3>
               <p class="content-text">Маркетинг</p>
@@ -119,7 +160,12 @@
         </li>
         <li class="content-items">
           <a class="content-links" href="">
-            <img class="content-img" src="./images/list-i-min.jpg" alt="фото работы за ноутбуком" width="370" height="294">
+            <div class="content-thumb">
+              <img class="content-img" src="./images/list-i-min.jpg" alt="фото работы за ноутбуком" width="370" height="294">
+              <div class="content-txt-thumb">
+                <p class="content-txt">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
             <div class="content-border">
               <h3 class="content-tittle">Growing Business</h3>
               <p class="content-text">Приложение</p>
