завершает домашнее задание 5

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     <div class="backdrop is-hidden" data-backdrop>
         <div class="modal">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum odio maiores laudantium quod doloremque at inventore dolorum rem laborum, aperiam eos soluta tenetur suscipit eius pariatur consectetur! Mollitia voluptatum deleniti voluptate sunt possimus dolorem quasi doloremque quibusdam animi. Ex in, debitis repellat excepturi alias earum optio. A tempore delectus at.</p>
-            <button class="banner-button-close" type="button" data-close-modal></button>
+            <svg data-close-modal class="button-close">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
         </div>
     </div>
             </div>
