виправляє помилки дз 5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="nav"><a class="logohead" href="/">
                 <span class="webhead">Web</span><span class="studiohead">Studio</span></a>
                 <ul class="main-navigation">
-                    <li class="nav-list"><a class="nav-item" href="./index.html">Студия</a></li>
+                    <li class="nav-list"><a class="nav-item current" href="./index.html">Студия</a></li>
                     <li class="nav-list"><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
                     <li class="nav-list"><a class="nav-item" href="">Контакты</a></li>
                 </ul>
