--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             class="studiohead">Studio</span></a>
         <ul class="main-navigation">
           <li class="nav-list"><a class="nav-item" href="./index.html">Студия</a></li>
-          <li class="nav-list"><a class="nav-item" href="./portfolio.html">Портфолио</a></li>
+          <li class="nav-list"><a class="nav-item current" href="./portfolio.html">Портфолио</a></li>
           <li class="nav-list"><a class="nav-item" href="">Контакты</a></li>
         </ul>
       </nav>
